# OrangeEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
cmake/: StandardProjectSettings.cmake  compiler.cmake
ext/: CMakeLists.txt  imgui.hpp
ports/fastnoise2/: portfile.cmake  vcpkg.json
ports/vk-bootstrap/: portfile.cmake  vcpkg.json  vk-bootstrap-config.cmake  vk-bootstrap-targets-debug.cmake  vk-bootstrap-targets-release.cmake
ports/vuk/: portfile.cmake  use_find_package.patch  vcpkg.json
ports/vuk-vma/: make_it_work.patch  portfile.cmake  vcpkg.json  vuk-vma-config.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  glfw.cpp  glfw.h  input.h
src/math/: CMakeLists.txt  matrix.h  vector.h
src/render/: CMakeLists.txt  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h
test/: CMakeLists.txt
test/math/: vector_tests.cpp
